[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "placy"
version = "0.1.2"
description = "PLACy causal discovery for power law spectra time series"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  {name = "Matteo Tusoni", email = "tusoni@di.uniroma1.it"}
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "statsmodels"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["placy*"]